fixed cart item appearance on small screens

--- a/src/sass/components/_cart-item.scss
+++ b/src/sass/components/_cart-item.scss
@@ -7,13 +7,14 @@
   border-radius: $br-small;
 
   display: grid;
-  grid-template-columns: 8.5rem 1fr;
+  grid-template-columns: 1fr;
   gap: 1em;
 
   &__img {
-    width: 8.5rem;
-    height: 8.5rem;
-
+    width: 100%;
+    min-height: 100%;
+    height: 8rem;
+    max-height: 14rem;
     img {
       border-radius: $br-small;
       height: 100%;
@@ -22,13 +23,11 @@
 
   &__details {
     display: grid;
-    grid-template-columns: minmax(0, 18rem) 1fr;
-    gap: 0.25em 2em;
+    grid-template-columns: 1fr min-content;
+    gap: 1rem;
   }
 
   &__name {
-    grid-column: 1;
-    grid-row: 1;
     a {
       text-decoration: none;
       color: currentColor;
@@ -38,21 +37,20 @@
       }
     }
   }
+
   &__description {
-    grid-column: 1;
+    grid-column: 1 / -1;
     grid-row: 2;
   }
 
   &__unit-price {
-    grid-column: 1;
-    grid-row: 3;
     display: flex;
     gap: 0.5em;
   }
 
   .quantity-form-control {
-    align-self: center;
-    justify-self: end;
+    grid-column: 1 / -1;
+    grid-row: 4;
     input {
       font-size: fs(100);
       padding-block: 0.25rem;
@@ -65,6 +63,8 @@
     padding: 0.25rem 0.5rem;
 
     &--icon {
+      grid-column: 2;
+      grid-row: 1;
       align-self: start;
       justify-self: end;
       padding-block-start: 0;
@@ -79,8 +79,49 @@
   }
 
   &__total-price {
-    justify-self: end;
+    grid-column: 1 / -1;
+    grid-row: 5;
     display: flex;
-    gap: 0.5em;
+    flex-wrap: wrap;
+    gap: 0 0.5em;
+  }
+
+  @include mq(small) {
+    grid-template-columns: 8.5rem 1fr;
+    &__img {
+      width: 8.5rem;
+    }
+
+    &__details {
+      grid-template-columns: minmax(0, 17rem) 1fr;
+      gap: 0.25em 1.25em;
+    }
+
+    &__name {
+      grid-column: 1;
+      grid-row: 1;
+    }
+    &__description {
+      grid-column: 1;
+      grid-row: 2;
+    }
+
+    &__unit-price {
+      grid-column: 1;
+      grid-row: 3;
+    }
+
+    .quantity-form-control {
+      grid-column: 2;
+      grid-row: 2;
+      align-self: center;
+      justify-self: end;
+    }
+
+    &__total-price {
+      grid-column: 2;
+      grid-row: 3;
+      justify-content: end;
+    }
   }
 }
